--- a/ThirdProject-QuizApp/app/src/main/res/values/styles.xml
+++ b/ThirdProject-QuizApp/app/src/main/res/values/styles.xml
@@ -3,9 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">#FF9800</item>
+        <item name="colorPrimaryDark">#808080</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorButtonNormal">#FF9800</item>
     </style>
 
 </resources>
