Stable working version. No visual polish, real content and intro.

--- a/FifthProject-TourGuideApp/app/src/main/res/layout/activity_main.xml
+++ b/FifthProject-TourGuideApp/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    app:itemTextColor="#4589aa"
+
     tools:openDrawer="start">
 
     <include
@@ -19,6 +21,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
+        app:itemTextColor="@drawable/navigation_item_color"
+
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
 
