--- a/FifthProject-TourGuideApp/app/src/main/res/values/drawables.xml
+++ b/FifthProject-TourGuideApp/app/src/main/res/values/drawables.xml
@@ -5,4 +5,6 @@
     <item name="ic_menu_manage" type="drawable">@android:drawable/ic_menu_manage</item>
     <item name="ic_menu_share" type="drawable">@android:drawable/ic_menu_share</item>
     <item name="ic_menu_send" type="drawable">@android:drawable/ic_menu_send</item>
+    <item name="ic_capital" type="drawable">@drawable/ic_capital</item>
+
 </resources>
